--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body {font-family: 'Tinos', serif;
-    background-image: url("./app/imagenes/fondo.jpg");
+    background-image: url("./app/imagenes/letrero.jpg");
     background-repeat:no-repeat;
     background-position:center center;
     background-attachment:fixed;
